findbugs changes and bug fixes.
Former-commit-id: 28614f2520382c8d75327f5c2faaa5b858730578